--- a/packages/thenewblk-css/package.json
+++ b/packages/thenewblk-css/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thenewblk-css",
-  "version": "1.0.2-0",
+  "version": "1.0.2-next.0",
   "description": "The new blk css modules",
   "main": "index.js",
   "repository": "https://github.com/broccolini/50shadesofblk/tree/master/packages/thenewblk-scss",
